# Type-Proofing

./: .gitignore  Assets.car  CODEBASE.md  MARKUP_PLAN.md  MIGRATION_PLAN.md  README.md  README_SETTINGS.md  README_modular.md  Type Proofing.py  TypeProofing.icns  TypeProofing.py  USER_GUIDE.md  accented_dictionary.py  app.py  app_config.py  build_app.sh  character_analysis.py  config.py  controls_tab.py  core_config.py  eng_wiki.tsv  entitlements-minimal.plist  entitlements.plist  extract_accents.py  feature_config.py  files_tab.py  font_analysis.py  font_manager.py  font_utils.py  fonts.py  format_config.py  main_window.py  markup_parser.py  pdf_manager.py  proof.py  proof_config.py  proof_generation.py  proof_handlers.py  prooftexts.py  prooftexts_new.py  (+17 more)
TypeProofing-SwiftUI/: UI_TESTS_FIXES.md  UI_TESTS_SUMMARY.md  project.yml
backup/: TypeProofing.py  controls_tab.py  core_config.py  pdf_manager.py  proof_config.py  proof_generation.py.bak  settings_manager.py  stepper_cell.py  text_generators.py  utils.py  variable_font_utils.py
native/: Cargo.toml  build_rust.sh
native/tp-bridge/: Cargo.toml  cbindgen.toml
native/tp-bridge/src/: lib.rs
python/: config.py  diagnostics.py  engine.py  fonts.py  generation_config.py  markup_parser.py  opentype_substitutions.py  pdf_manager.py  proof.py  sample_texts.py  script_texts.py  settings.py  text_generators.py  worker.py
tests/: conftest.py  test_accented_dict.py  test_app.py  test_config.py  test_fonts.py  test_generation_config.py  test_layout_popover.py  test_markup_parser.py  test_opentype_substitutions.py  (+8 more)
(+86 files in other folders)
